# eperica

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md
.claude/: settings.json
.claude/agents/: eperica-reviewer.md
.github/workflows/: ci.yml
crates/application/: Cargo.toml
crates/application/src/: achievements.rs  admin.rs  alliance.rs  artifact.rs  auth.rs  build.rs  build.rs.bak  combat.rs  comms.rs  culture.rs  economy.rs  fairplay.rs  forum.rs  lib.rs  lifecycle.rs  map.rs  medals.rs  movement.rs  movement.rs.bak  notification.rs  oasis.rs  ports.rs  profile.rs  quests.rs  ranking.rs  register.rs  scheduler.rs  scouting.rs  search.rs  settings.rs  settling.rs  sitting.rs  starvation.rs  tests.rs  trade.rs  units.rs  units.rs.bak  wonder.rs
crates/domain/: Cargo.toml
crates/domain/benches/: hot.rs
crates/domain/src/: achievements.rs  alliance.rs  artifact.rs  building.rs  combat.rs  comms.rs  construction.rs  culture.rs  economy.rs  economy.rs.bak  error.rs  event.rs  fairplay.rs  forum.rs  lib.rs  lifecycle.rs  loyalty.rs  map.rs  medals.rs  movement.rs  notification.rs  oasis.rs  presence.rs  quest.rs  ranking.rs  resource.rs  scouting.rs  search.rs  sitter.rs  trade.rs  units.rs  units.rs.bak  village.rs  wonder.rs  world.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: balance.rs  comms_live.rs  config.rs  db.rs  event_store.rs  lib.rs  perf.rs  repo.rs  repo.rs.bak  security.rs  world.rs  world_rules.rs
crates/perf/: Cargo.toml
crates/perf/src/: main.rs
crates/web/: Cargo.toml
crates/web/src/: auth.rs  handlers.rs  handlers.rs.bak  lib.rs  main.rs  registry.rs  state.rs  templates.rs
crates/web/static/: app.css  base.css  landing.css  theme-ash.css  theme-ember.css  theme-hearth.css  theme-steel.css
crates/web/static/buildings/: README.md
crates/web/static/units/: README.md
crates/web/templates/: _brand.html  _icons.html  _ribbon.html  _upgrade.html  academy.html  admin.html  alliance.html  alliance_stats.html  base.html  build_menu.html  conversation.html  detail.html  forum.html  forum_thread.html  impressum.html  index.html  leaderboard.html  login.html  map.html  market.html  messages.html  mod_account.html  mod_queue.html  notifications.html  player_stats.html  privacy.html  profile.html  quests.html  rally.html  register.html  report.html  reports.html  scout_report.html  search.html  settings.html  sitting.html  smithy.html  styleguide.html  terms.html  troops.html  (+3 more)
crates/web/tests/: integration.rs
docs/: README.md  concept.md  eperica_concept.docx
docs/architecture/: 0001-workspace-and-layering.md  0002-event-scheduler.md  0003-auth-and-sessions.md  0004-resource-economy.md  0005-construction.md  0006-tribes-and-units.md  0007-training-and-starvation.md  0008-world-map.md  0009-troop-movement.md  0010-marketplace-trade.md  0011-combat.md  0012-scouting.md  0013-siege-loot.md  0014-oases.md  0015-settling.md  0016-conquest.md  0017-alliances.md  0018-ranking.md  0019-medals.md  0020-quests.md  0021-protection-and-lifecycle.md  0022-artifacts-and-natars.md  0023-wonder-and-victory.md  0024-fair-play-and-anti-cheat.md  0025-performance-and-scale.md  0026-communication.md  0027-profiles-and-presence.md  0028-notifications.md  0029-alliance-forum.md  0030-search.md  0031-settings.md  0032-account-sitting.md  0033-informative-actions.md  0034-multi-world-and-administration.md  0035-per-world-configuration.md
docs/art/: building-backgrounds.md  village-map-background.md
docs/manual/: README.md  account-sitting.md  alliance-forum.md  alliances.md  artifacts.md  buildings.md  combat.md  communication.md  conquest.md  fair-play-and-moderation.md  getting-started.md  medals-and-achievements.md  notifications.md  oases.md  profiles-and-presence.md  protection-and-lifecycle.md  quests-and-onboarding.md  ranking-and-statistics.md  resources.md  scouting.md  search.md  settings.md  settling.md  siege-and-loot.md  the-map.md  trade.md  training-and-upkeep.md  tribes-and-units.md  troop-movement.md  wonder-and-victory.md
docs/operations/: perf-tooling.md
migrations/: 0001_initial_schema.sql  0002_village_resources.sql  0003_backfill_village_resources.sql  0004_build_orders.sql  0005_tribes.sql  0006_units.sql  0007_build_lanes.sql  0008_training.sql  0009_world_seed.sql  0010_movements.sql  0011_trade.sql  0012_combat.sql  0013_scouting.sql  0014_siege_loot.sql  0015_oases.sql  0016_oasis_reports.sql  0017_oasis_regrow.sql  0018_capital.sql  0019_culture.sql  0020_settle.sql  0021_culture_backfill.sql  0022_loyalty.sql  0023_conquest_report.sql  0024_alliances.sql  0025_alliance_incoming_index.sql  0026_ranking.sql  0027_medals.sql  0028_quests.sql  0029_lifecycle.sql  0030_preserve_battle_reports.sql  0031_artifact_release.sql  0032_artifacts.sql  0033_wonder.sql  0034_fair_play.sql  0035_communication.sql  0036_profiles.sql  0037_notifications.sql  0038_alliance_forum.sql  0039_search.sql  0040_notification_mutes.sql  (+9 more)
specs/: README.md  constitution.md  game-design.md  implementation-workflow.md  roadmap.md  roles.md  social-and-meta-features.md  ui-style-guide.md
specs/balance/: combat.toml  conquest.toml  construction.toml  culture.toml  economy.toml  fairplay.toml  lifecycle.toml  medals.toml  trade.toml  units.toml  wonder.toml
specs/features/001-foundation/: plan.md  spec.md  tasks.md
specs/features/002-resource-production/: plan.md  spec.md  tasks.md
specs/features/003-construction/: plan.md  spec.md  tasks.md
specs/features/004-tribes-and-units/: plan.md  spec.md  tasks.md
specs/features/005-training-and-upkeep/: plan.md  spec.md  tasks.md
specs/features/006-world-map/: plan.md  spec.md  tasks.md
specs/features/007-troop-movement/: plan.md  spec.md  tasks.md
specs/features/008-marketplace-trade/: plan.md  spec.md  tasks.md
specs/features/009-combat/: plan.md  spec.md  tasks.md
specs/features/010-scouting/: plan.md  spec.md  tasks.md
specs/templates/: plan-template.md  spec-template.md  tasks-template.md
(+261 files in other folders)
