[package]
name = "eperica-infrastructure"
version.workspace = true
edition.workspace = true
publish.workspace = true

# Implements the application's ports with concrete adapters (SQLx/Postgres, etc.). All I/O lives here.
[dependencies]
eperica-domain = { path = "../domain" }
eperica-application = { path = "../application" }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "migrate",
    "macros",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
dotenvy = "0.15"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
