[package]
name = "eperica-web"
version.workspace = true
edition.workspace = true
publish.workspace = true

# The HTTP/UI entrypoint; wires the application + infrastructure layers. Axum/Askama arrive in T14+.
[dependencies]
eperica-application = { path = "../application" }
eperica-infrastructure = { path = "../infrastructure" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
