[package]
name = "eperica-web"
version.workspace = true
edition.workspace = true
publish.workspace = true

# The HTTP/UI entrypoint; wires the application + infrastructure layers.
[dependencies]
eperica-domain = { path = "../domain" }
eperica-application = { path = "../application" }
eperica-infrastructure = { path = "../infrastructure" }
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie-private"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "net"] }
tower-http = { version = "0.6", features = ["trace"] }
askama = "0.12"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["cookies"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
dotenvy = "0.15"
axum = "0.8"
axum-extra = { version = "0.10", features = ["cookie-private"] }
eperica-domain = { path = "../domain" }
eperica-infrastructure = { path = "../infrastructure" }
